# Polymarket-Super-Paper-Trade

./: README.md  paper_trader_state.json  pyproject.toml
examples/: btc_normal_demo.py  btc_verbose_demo.py  eth_15min_demo.py  eth_verbose_demo.py
polymarket_trader/: __init__.py  display.py  exceptions.py  fees.py  models.py  paper_trader.py  state.py  utils.py  websocket_feed.py
polymarket_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_paper_trader.py
