[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-trader"
version = "0.1.0"
description = "Paper trading library for Polymarket prediction markets"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12",
    "certifi",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket_trader*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
